--- a/Lab1.html
+++ b/Lab1.html
@@ -22,54 +22,54 @@
             <h2><a name="descripcion"></a>Términos</h2>
             <table>
                 <tr>
-                    <th>URL</th>
-                    <th>Uniform Resource Locator</th>
-                    <th>Es un conjunto de caractéres que apunta a una dirección</th>
+                    <td>URL</td>
+                    <td>Uniform Resource Locator</td>
+                    <td>Es un conjunto de caractéres que apunta a una dirección</td>
                 </tr>
                 <tr>
-                    <th>MIME</th>
-                    <th>Multipurpose Internet Mail Extensions</th>
-                    <th>Estandar para indicar el formato de un documento</th>
+                    <td>MIME</td>
+                    <td>Multipurpose Internet Mail Extensions</td>
+                    <td>Estandar para indicar el formato de un documento</td>
                 </tr>
                 <tr>
-                    <th>Métodos y códigos de errores HTTP</th>
-                    <th></th>
-                    <th>Los métodos sirven para enviar peticiones y los códigos dan información del estatus de la petición</th>
+                    <td>Métodos y códigos de errores HTTP</td>
+                    <td></td>
+                    <td>Los métodos sirven para enviar peticiones y los códigos dan información del estatus de la petición</td>
                 </tr>
                 <tr>
-                    <th>XML</th>
-                    <th>Extensible Markup Language</th>
-                    <th>Lenguaje para definir tipos de datos y otros lenguajes</th>
+                    <td>XML</td>
+                    <td>Extensible Markup Language</td>
+                    <td>Lenguaje para definir tipos de datos y otros lenguajes</td>
                 </tr>
                 <tr>
-                    <th>XHTML</th>
-                    <th>Extensible HyperText Markup Language</th>
-                    <th>HTML expresado como XML, facilita la detección de errores</th>
+                    <td>XHTML</td>
+                    <td>Extensible HyperText Markup Language</td>
+                    <td>HTML expresado como XML, facilita la detección de errores</td>
                 </tr>
                 <tr>
-                    <th>HTML5</th>
-                    <th>HyperText Markup Language</th>
-                    <th>Lenguaje para la elaboración de páginas web</th>
+                    <td>HTML5</td>
+                    <td>HyperText Markup Language</td>
+                    <td>Lenguaje para la elaboración de páginas web</td>
                 </tr>
                 <tr>
-                    <th>JS</th>
-                    <th>JavaScript</th>
-                    <th>Lenguaje de programación para la creación de páginas web dinámicas</th>
+                    <td>JS</td>
+                    <td>JavaScript</td>
+                    <td>Lenguaje de programación para la creación de páginas web dinámicas</td>
                 </tr>
                 <tr>
-                    <th>php</th>
-                    <th>Hypertext Preprocessor</th>
-                    <th>Lenguaje de programación para hacer páginas web más dinámicas e interactivas</th>
+                    <td>php</td>
+                    <td>Hypertext Preprocessor</td>
+                    <td>Lenguaje de programación para hacer páginas web más dinámicas e interactivas</td>
+                </tr>   
+                <tr>
+                    <td>jsp</td>
+                    <td>JavaServer Pages</td>
+                    <td>Herramienta para la creación de aplicaciones web. Similar a PHP, pero utiliza Java</td>
                 </tr>
                 <tr>
-                    <th>jsp</th>
-                    <th>JavaServer Pages</th>
-                    <th>Herramienta para la creación de aplicaciones web. Similar a PHP, pero utiliza Java</th>
-                </tr>
-                <tr>
-                    <th>Ajax</th>
-                    <th>Asynchronous JavaScript And XML</th>
-                    <th>Técnica que permite acceder a un servidor dese una página web y cambiar una página sin actualizarla</th>
+                    <td>Ajax</td>
+                    <td>Asynchronous JavaScript And XML</td>
+                    <td>Técnica que permite acceder a un servidor dese una página web y cambiar una página sin actualizarla</td>
                 </tr>
             </table>            
         </article>
