--- a/Lab 3/index.html
+++ b/Lab 3/index.html
@@ -4,35 +4,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Laboratorio 3</title>
-        <link href="style.css" rel="stylesheet">
+        <link href="minified.css" rel="stylesheet">
     </head>
 
     <body>
         <header>
-            <h1>DAW Lab 3</h1>
+            <h1 id="nombre">DAW Lab 3</h1>
         </header>
 
         <nav>
-            <table class="nav" align="center" width="100%">
-                <tr>
-                    <td>
-                        <a href="#descripcion">Tecnologías</a>
-                    </td>
-                    <td>
-                        <a href="#preguntas1">Preguntas 1</a>
-                    </td>
-
-                    <td>
-                        <a href="#preguntas2">Preguntas 2</a>
-                    </td>
-                    <td>
-                        <a href="#investigacion">Investigación 1</a>
-                    </td>
-                    <td>
-                       <a href="#referencias">Referencias</a>
-                    </td>
-                </tr>
-            </table>
+            <a href="#descripcion">Tecnologías</a>
+            <a href="#preguntas1">Preguntas 1</a>
+            <a href="#preguntas2">Preguntas 2</a>
+            <a href="#investigacion">Investigación 1</a>
+            <a href="#referencias">Referencias</a>
         </nav>
 
         <article>
@@ -44,52 +29,52 @@
                     <th>Función</th>
                 </tr>
                 <tr>
-                    <td id="nombre">URL</td>
+                    <td>URL</td>
                     <td>Uniform Resource Locator</td>
                     <td>Es un conjunto de caractéres que apunta a una dirección</td>
                 </tr>
                 <tr>
-                    <td id="nombre">MIME</td>
+                    <td>MIME</td>
                     <td>Multipurpose Internet Mail Extensions</td>
                     <td>Estandar para indicar el formato de un documento</td>
                 </tr>
                 <tr>
-                    <td id="nombre">Métodos y códigos de errores HTTP</td>
+                    <td>Métodos y códigos de errores HTTP</td>
                     <td></td>
                     <td>Los métodos sirven para enviar peticiones y los códigos dan información del estatus de la petición</td>
                 </tr>
                 <tr>
-                    <td id="nombre">XML</td>
+                    <td>XML</td>
                     <td>Extensible Markup Language</td>
                     <td>Lenguaje para definir tipos de datos y otros lenguajes</td>
                 </tr>
                 <tr>
-                    <td id="nombre">XHTML</td>
+                    <td>XHTML</td>
                     <td>Extensible HyperText Markup Language</td>
                     <td>HTML expresado como XML, facilita la detección de errores</td>
                 </tr>
                 <tr>
-                    <td id="nombre">HTML5</td>
+                    <td>HTML5</td>
                     <td>HyperText Markup Language</td>
                     <td>Lenguaje para la elaboración de páginas web</td>
                 </tr>
                 <tr>
-                    <td id="nombre">JS</td>
+                    <td>JS</td>
                     <td>JavaScript</td>
                     <td>Lenguaje de programación para la creación de páginas web dinámicas</td>
                 </tr>
                 <tr>
-                    <td id="nombre">php</td>
+                    <td>php</td>
                     <td>Hypertext Preprocessor</td>
                     <td>Lenguaje de programación para hacer páginas web más dinámicas e interactivas</td>
                 </tr>   
                 <tr>
-                    <td id="nombre">jsp</td>
+                    <td>jsp</td>
                     <td>JavaServer Pages</td>
                     <td>Herramienta para la creación de aplicaciones web. Similar a PHP, pero utiliza Java</td>
                 </tr>
                 <tr>
-                    <td id="nombre">Ajax</td>
+                    <td>Ajax</td>
                     <td>Asynchronous JavaScript And XML</td>
                     <td>Técnica que permite acceder a un servidor dese una página web y cambiar una página sin actualizarla</td>
                 </tr>
