--- a/Lab 5/productos.html
+++ b/Lab 5/productos.html
@@ -23,7 +23,7 @@
             <table>
                 <tr>
                     <td><div class="producto">
-                        <img class="imagen" src="elote.jpg">
+                        <img class="imagen" src="elote.jpg" alt="elote">
                         <h3>Elote</h3>
                         <p>Precio: <precio id="precioelote">12</precio></p><br>
                         <button onclick = "quitar('elote', 'precioelote')">-</button>
@@ -31,7 +31,7 @@
                         <button onclick = "agregar('elote', 'precioelote')">+</button><br>
                     </div></td>
                     <td><div class="producto">
-                        <img class="imagen" src="trolelote.jpg">
+                        <img class="imagen" src="trolelote.jpg" alt="trolelote">
                         <h3>Trolelote</h3>
                         <p>Precio: <precio id="preciotrolelote">15</precio></p><br>
                         <button onclick = "quitar('trolelote', 'preciotrolelote')">-</button>
@@ -39,7 +39,7 @@
                         <button onclick = "agregar('trolelote', 'preciotrolelote')">+</button><br>
                     </div></td>
                     <td><div class="producto">
-                        <img class="imagen" src="conchitas.jpg">
+                        <img class="imagen" src="conchitas.jpg" alt="conchitas">
                         <h3>Conchitas</h3>
                         <p>Precio: <precio id="precioconchitas">20</precio></p><br>
                         <button onclick = "quitar('conchitas', 'precioconchitas')">-</button>
@@ -57,17 +57,17 @@
             <table class = "tecno">
                 <tr>
                     <th>
-                        <p>Precio: <precio id="precio">0</precio></p>
+                        <p>Precio: <span id="precio">0</precio></p>
                     </th>
                 </tr>
                 <tr>
                     <th>
-                        <p>IVA: <iva id="iva">0</iva></p>
+                        <p>IVA: <span id="iva">0</iva></p>
                     </th>
                 </tr>
                 <tr>
                     <th>
-                        <p>Total: <total id="total">0</total></p>
+                        <p>Total: <span id="total">0</total></p>
                     </th>
                 </tr>
             </table>
