--- a/Lab 5/password.html
+++ b/Lab 5/password.html
@@ -11,7 +11,8 @@
         <div class="topnav">
             <a class="active" href="password.html">Password</a>
             <a href="productos.html">Productos</a>
-            <a href="libre.html">Libre</a>
+            <a href="libre.html">Registrate</a>
+            <a href="preguntas.html">Preguntas</a>
         </div>
 
         <header>
@@ -24,8 +25,8 @@
                 Contraseña:<br>
                 <input type="password" id="password"/><br>
                 Verificar:<br>
-                <input type ="password" id="passwordV"/>
-                <br><br>
+                <input type ="password" id="passwordV"/><br>
+                <br>
                 <button onclick="checkpwd()">Enviar</button>
             </form>
         </article><hr>
