--- a/Lab 5/productos.html
+++ b/Lab 5/productos.html
@@ -11,7 +11,8 @@
         <div class="topnav">
             <a href="password.html">Password</a>
             <a class="active" href="productos.html">Productos</a>
-            <a href="libre.html">Libre</a>
+            <a href="libre.html">Registrate</a>
+            <a href="preguntas.html">Preguntas</a>
         </div>
 
         <header>
@@ -23,27 +24,27 @@
             <table>
                 <tr>
                     <td><div class="producto">
-                        <img class="imagen" src="elote.jpg" alt="elote">
+                        <img class="imagen" src="elote.jpg">
                         <h3>Elote</h3>
                         <p>Precio: <span id="precioelote">12</span></p><br>
                         <button onclick = "quitar('elote', 'precioelote')">-</button>
-                        <span id="elote" >0</span>
+                        <span id="elote">0</span>
                         <button onclick = "agregar('elote', 'precioelote')">+</button><br>
                     </div></td>
                     <td><div class="producto">
-                        <img class="imagen" src="trolelote.jpg" alt="trolelote">
+                        <img class="imagen" src="trolelote.jpg">
                         <h3>Trolelote</h3>
                         <p>Precio: <span id="preciotrolelote">15</span></p><br>
                         <button onclick = "quitar('trolelote', 'preciotrolelote')">-</button>
-                        <span id="trolelote" >0</span>
+                        <span id="trolelote">0</span>
                         <button onclick = "agregar('trolelote', 'preciotrolelote')">+</button><br>
                     </div></td>
                     <td><div class="producto">
-                        <img class="imagen" src="conchitas.jpg" alt="conchitas">
+                        <img class="imagen" src="conchitas.jpg">
                         <h3>Conchitas</h3>
                         <p>Precio: <span id="precioconchitas">20</span></p><br>
                         <button onclick = "quitar('conchitas', 'precioconchitas')">-</button>
-                        <span id="conchitas" >0</span>
+                        <span id="conchitas">0</span>
                         <button onclick = "agregar('conchitas', 'precioconchitas')">+</button><br> 
                     </div></td>
                 </tr>
@@ -53,7 +54,6 @@
                     </td>
                 </tr>
             </table>
-            
             <table class = "tecno">
                 <tr>
                     <th>
