--- a/Lab 9/_header.html
+++ b/Lab 9/_header.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>DAW Lab 9</title>
-        
+
         <link href="css/palette.css" rel="stylesheet">
         <link href="css/materialize.css" rel="stylesheet">
     </head>
+    <body>
