--- a/Lab 11/_agregarBodega.html
+++ b/Lab 11/_agregarBodega.html
@@ -125,9 +125,10 @@
                           Porque se hace más segura la página, ya que oculta el php y el script</li><br>
                        <li>Aparte de los arreglos $_POST y $_GET, ¿qué otros arreglos están predefinidos en php y cuál es su función?<br>
                            <ul>
-                               <li></li>
-                               <li></li>
-                               <li></li>
+                               <li>$_COOKIE - Cookies HTTP</li>
+                               <li>$_SESSION - Información del entorno del servidor y de ejecución</li>
+                               <li>$_FILES - Variables de subida de ficheros HTTP</li>
+                               <li>$_REQUEST — Variables HTTP Request</li>
                            </ul>
                        </li><br>
                        <li>Explora las funciones de php, y describe 2 que no hayas visto en otro lenguaje y que llamen tu atención.<br>
