--- a/Lab 13/_iniciar.html
+++ b/Lab 13/_iniciar.html
@@ -54,24 +54,14 @@
                 <div class="card">
                     <h2 class="title text-center">Preguntas</h2>
                     <ul>
-                       <li>¿Por qué es una buena práctica separar el controlador de la vista?.<br>
-                          Porque se hace más segura la página, ya que oculta el php y el script</li><br>
-                       <li>Aparte de los arreglos $_POST y $_GET, ¿qué otros arreglos están predefinidos en php y cuál es su función?<br>
-                           <ul>
-                               <li>$_COOKIE - Cookies HTTP</li>
-                               <li>$_SESSION - Información del entorno del servidor y de ejecución</li>
-                               <li>$_FILES - Variables de subida de ficheros HTTP</li>
-                               <li>$_REQUEST — Variables HTTP Request</li>
-                           </ul>
-                       </li><br>
-                       <li>Explora las funciones de php, y describe 2 que no hayas visto en otro lenguaje y que llamen tu atención.<br>
-                           <ul>
-                               <li>jdtojewish - Convierte una fecha a una fecha en el calendario judío</li>
-                               <li>password_hash - Encripta contraseñas con un hash</li>
-                           </ul>
-                       </li><br>
-                       <li>¿Qué es XSS y cómo se puede prevenir?<br>
-                          Cross-Site Scripting. Es un ataque basado en la inyección de código, un usuario envía scripts a una aplicación web. Se puede prevenir realizando validaciones de los datos que los usuarios ingresan</li><br>
+                       <li>¿Por qué es importante hacer un session_unset() y luego un session_destroy()?<br>
+                          session_unset() elimina las variables asociadas con la sesión y session_destroy() destruye la información registrada en una sesión. Por lo tanto se deber eliminar las variables primero o se podría volver a acceder a ellas.</li><br>
+                       <li>¿Cuál es la diferencia entre una variable de sesión y una cookie?<br>
+                          Una variable de sesión guarda los valores del servidor. Una cookie guarda del lado del cliente la información del usuario</li><br>
+                       <li>¿Qué técnicas se utilizan en sitios como facebook para que el usuario no sobreescriba sus fotos en el sistema de archivos cuando sube una foto con el mismo nombre?<br>
+                          Le asigna un nombre único con la fecha de subida</li><br>
+                       <li>¿Qué es CSRF y cómo puede prevenirse?<br>
+                          Cross-site request forgery. Un tipo de ataque que explota la confianza que un sitio web tiene en un usuario particular, el atacante envía peticiones haciendose pasar por el usuario</li><br>
                     </ul>
                   </div>
               </div>
