--- a/Lab 14/_footer.html
+++ b/Lab 14/_footer.html
@@ -1,3 +1,20 @@
+<div class="row">
+    <div class="col-lg-12 col-md-12">
+        <div class="card">
+            <h2 class="title text-center">Preguntas</h2>
+            <ul>
+                <li>¿Qué es ODBC y para qué es útil?<br>
+                    Open DataBase Connectivity. Es un estándar de acceso a las bases de datos para hacer posible el acceso a cualquier dato desde cualquier aplicación, sin importar qué sistema de gestión de bases de datos se utilice</li><br>
+                <li>¿Qué es SQL Injection?<br>
+                    Un tipo de ataque que aprovecha la vulnerabilidad de poder insertar codigo SQL en una base de datos</li><br>
+                <li>¿Qué técnicas puedes utilizar para evitar ataques de SQL Injection?<br>
+                    Limpiar las entradas, escapar los caracteres especiales, delimintar los valores de consultas, asignar minimos privilegios al usuario que conectará con la base de datos</li><br>
+            </ul>
+        </div>
+    </div>
+</div>
+</div>
+
 </body>
 <!--   Core JS Files   -->
 <script src="../resources/js/jquery-3.2.1.min.js" type="text/javascript"></script>
