--- a/Lab 16/_agregarProveedor.html
+++ b/Lab 16/_agregarProveedor.html
@@ -1,36 +1,7 @@
-<div class="main-panel">
-    <nav class="navbar navbar-transparent navbar-absolute">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Clientes</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-
-                    <li>
-                        <a href="#Francisco" class="dropdown-toggle" data-toggle="dropdown">
-                            <p>Hugo Arturo <i class="material-icons">keyboard_arrow_down</i></p>
-                            <p class="hidden-lg hidden-md">Perfil</p>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="#">Editar Perfil</a>
-                            </li>
-                            <li>
-                                <a href="#">Cerrar Sesión</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <div class="content">
         <div class="container-fluid">
 
 
-
-            <!--Sección de pendientes-->
             <div class="row">
               <div class="col-lg-12 col-md-12">
                 <div class="card">
@@ -39,7 +10,7 @@
                         <p class="category">Los espacios marcados con * son obligatorios</p>
                     </div>
                     <div class="card-content">
-                        <form>
+                        <form action="create.php" method="POST">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group label-floating">
@@ -97,4 +68,3 @@
             </div>
         </div>
     </div>
-</div>
