--- a/Lab 19/_editarProveedor.html
+++ b/Lab 19/_editarProveedor.html
@@ -6,11 +6,11 @@
               <div class="col-lg-12 col-md-12">
                 <div class="card">
                     <div class="card-header" >
-                        <h4 class="title">Nuevo Proveedor</h4>
+                        <h4 class="title">Editar Proveedor</h4>
                         <p class="category">Los espacios marcados con * son obligatorios</p>
                     </div>
                     <div class="card-content">
-                        <form action="create.php" method="POST">
+                        <form action="update.php" method="POST">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group label-floating">
@@ -59,7 +59,7 @@
                                   </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary pull-right btn-round">Guardar Proveedor</button>
+                            <button type="submit" class="btn btn-primary pull-right btn-round">Guardar Edición</button>
                         </form>
                         <form action="index.php">
                             <button type="submit" class="btn btn-danger pull-right btn-round">Cancelar</button>
