--- a/Lab 19/_footer.html
+++ b/Lab 19/_footer.html
@@ -3,10 +3,12 @@
         <div class="card">
             <h2 class="title text-center">Preguntas</h2>
             <ul>
-                <li>¿Por qué es una buena práctica separar el modelo del controlador?<br>
-                    Porque así así se crea una biblioteca encargada de comunicarse con la base de datos, que sea la unica encargada de establecer conexión</li><br>
-                <li>¿Qué es SQL injection y cómo se puede prevenir?<br>
-                    Un tipo de ataque que aprovecha la vulnerabilidad de poder insertar codigo SQL en una base de datos</li><br>
+                <li>¿Qué importancia tiene AJAX en el desarrollo de RIA's (Rich Internet Applications)?<br>
+                    AJAX es una herramienta que facilita el desarrollo de RIA's por la posibilidad de cargar datos de manera asíncrona</li><br>
+                <li>¿Qué implicaciones de seguridad tiene AJAX? ¿Dónde se deben hacer las validaciones de seguridad, del lado del cliente o del lado del servidor?<br>
+                    Al igual que con JS, es vulnerable a diversos ataques como el XSS, por lo cual hay que realizar validaciones primero en el cliente</li><br>
+                <li>¿Qué es JSON?<br>
+                    JavaScript Object Notation. Un formato de texto que facilita el intercambio de datos entre el navegador y el servidor, notación literal de objetos de JavaScript</li><br>
             </ul>
         </div>
     </div>
@@ -38,5 +40,7 @@
 
     });
 </script>
+
+<script type="text/javascript" src="ajax.js"></script>
 
 </html>
