--- a/Lab 19/_agregarProveedor.html
+++ b/Lab 19/_agregarProveedor.html
@@ -1,7 +1,6 @@
     <div class="content">
         <div class="container-fluid">
 
-
             <div class="row">
               <div class="col-lg-12 col-md-12">
                 <div class="card">
@@ -28,11 +27,12 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group label-floating">
-                                        <label class="control-label">Ciudad</label>
-                                        <input type="text" class="form-control" name="ciudad" id="ciudad" required>
+                                      <label class="control-label">Ciudad</label>
+                                      <input type="text" class="form-control" id="userInput" onkeypress="getSuggestion()">
                                     </div>
+                                    <div id="ajaxResponse"></div>   
                                 </div>
-                                <div class="col-md-6    ">
+                                <div class="col-md-6">
                                     <div class="form-group label-floating">
                                         <label class="control-label">Direccion</label>
                                         <input type="text" class="form-control" name="direccion" id="direccion" required>
