--- a/Lab 19/_editarProveedor.html
+++ b/Lab 19/_editarProveedor.html
@@ -28,9 +28,10 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group label-floating">
-                                        <label class="control-label">Ciudad</label>
-                                        <input type="text" class="form-control" name="ciudad" id="ciudad" required>
+                                      <label class="control-label">Ciudad</label>
+                                      <input type="text" class="form-control" id="userInput" onkeypress="getSuggestion()">
                                     </div>
+                                    <div id="ajaxResponse"></div>
                                 </div>
                                 <div class="col-md-6    ">
                                     <div class="form-group label-floating">
