--- a/Lab 16/_editarProveedor.html
+++ b/Lab 16/_editarProveedor.html
@@ -15,13 +15,13 @@
                                 <div class="col-md-6">
                                     <div class="form-group label-floating">
                                         <label class="control-label">Nombre</label>
-                                        <input type="text" class="form-control" name="nombre" id="nombre" required>
+                                        <input type="text" class="form-control" name="nombre" id="nombre" value="<?= $nombre ?>" required>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group label-floating">
                                         <label class="control-label">Empresa</label>
-                                        <input type="text" class="form-control" name="empresa" id="empresa" required>
+                                        <input type="text" class="form-control" name="empresa" id="empresa" value="<?= $empresa ?>" required>
                                     </div>
                                 </div>
                             </div>
@@ -29,13 +29,13 @@
                                 <div class="col-md-6">
                                     <div class="form-group label-floating">
                                         <label class="control-label">Ciudad</label>
-                                        <input type="text" class="form-control" name="ciudad" id="ciudad" required>
+                                        <input type="text" class="form-control" name="ciudad" id="ciudad"  value="<?= $ciudad ?>"required>
                                     </div>
                                 </div>
                                 <div class="col-md-6    ">
                                     <div class="form-group label-floating">
                                         <label class="control-label">Direccion</label>
-                                        <input type="text" class="form-control" name="direccion" id="direccion" required>
+                                        <input type="text" class="form-control" name="direccion" id="direccion" value="<?= $direccion ?>" required>
                                     </div>
                                 </div>
                             </div>
@@ -43,19 +43,19 @@
                                 <div class="col-md-4">
                                   <div class="form-group label-floating">
                                     <label class="control-label">RFC</label>
-                                    <input type="text" class="form-control" name="rfc" id="rfc" required>
+                                    <input type="text" class="form-control" name="rfc" id="rfc" value="<?= $rfc ?>" readonly>
                                   </div>
                                 </div>
                                 <div class="col-md-4">
                                   <div class="form-group label-floating">
                                     <label class="control-label">Telefono</label>
-                                    <input type="tel" class="form-control" name="telefono" id="telefono" required>
+                                    <input type="tel" class="form-control" name="telefono" id="telefono" value="<?= $telefono ?>" required>
                                   </div>
                                 </div>
                                 <div class="col-md-4">
                                   <div class="form-group label-floating">
                                     <label class="control-label">Correo</label>
-                                    <input type="email" class="form-control" name="correo" id="correo" required>
+                                    <input type="email" class="form-control" name="correo" id="correo" value="<?= $email ?>" required>
                                   </div>
                                 </div>
                             </div>
