--- a/Lab 20/_footer.html
+++ b/Lab 20/_footer.html
@@ -3,12 +3,17 @@
         <div class="card">
             <h2 class="title text-center">Preguntas</h2>
             <ul>
-                <li>¿Qué importancia tiene AJAX en el desarrollo de RIA's (Rich Internet Applications)?<br>
-                    AJAX es una herramienta que facilita el desarrollo de RIA's por la posibilidad de cargar datos de manera asíncrona</li><br>
-                <li>¿Qué implicaciones de seguridad tiene AJAX? ¿Dónde se deben hacer las validaciones de seguridad, del lado del cliente o del lado del servidor?<br>
-                    Al igual que con JS, es vulnerable a diversos ataques como el XSS, por lo cual hay que realizar validaciones primero en el cliente</li><br>
-                <li>¿Qué es JSON?<br>
-                    JavaScript Object Notation. Un formato de texto que facilita el intercambio de datos entre el navegador y el servidor, notación literal de objetos de JavaScript</li><br>
+                <li>Explica y elabora un diagrama sobre cómo funciona AJAX con jQuery.<br>
+                    <img src="diagrama.png"></img></li><br>
+                <li>¿Qué alternativas a jQuery existen?<br>
+                    <ul>
+                        <li>Ext JS</li>
+                        <li>Zepto</li>
+                        <li>Qwery</li>
+                        <li>Mootools</li>
+                        <li>XUI</li>
+                        <li>Sizzle</li>
+                </li><br>
             </ul>
         </div>
     </div>
